Fix width layout on narrow screens

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -134,6 +134,7 @@ section.external-link {
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 1rem;
+  overflow-wrap: anywhere;
 }
 
 ul.button-hlist {
